well it boots now

--- a/moneythrower-standalone-lua/i18n/english.json
+++ b/moneythrower-standalone-lua/i18n/english.json
@@ -1,5 +1,5 @@
 {
-    "bm_w_money_standalone" : "",
+    "bm_w_money_standalone" : "Cash Blaster",
     "bm_w_money_standalone_desc" : "",
     "des_money_standalone" : ""
 }
